fixed recent posts and weird nav bar spacing

--- a/src/components/main.scss
+++ b/src/components/main.scss
@@ -155,12 +155,12 @@ h1{
 }
 
 .eventsHeading{
-  margin-top: 150px;
   font-weight: bold;
 }
 .purple{
   color: $landing-purple;
 }
 
-
-
+.belowNav{
+  padding-top: 15vh;
+}
